[gd_scene load_steps=4 format=2]

[ext_resource path="res://unit/player/WeaponSystem.gd" type="Script" id=1]
[ext_resource path="res://item/weapon/hand/Hand.tscn" type="PackedScene" id=2]
[ext_resource path="res://unit/player/WeaponSystemControl.tscn" type="PackedScene" id=3]

[node name="WeaponSystem" type="Spatial"]
script = ExtResource( 1 )

[node name="RightHand" parent="." instance=ExtResource( 2 )]

[node name="LeftHand" parent="." instance=ExtResource( 2 )]

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 1264.0
margin_bottom = 704.0
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 688.0
margin_right = 1248.0
margin_bottom = 688.0
custom_constants/separation = 16

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 300.0
size_flags_horizontal = 3

[node name="WeaponSystemControl" parent="MarginContainer/VBoxContainer/HBoxContainer/CenterContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 144.0
margin_right = 156.0

[node name="CenterContainer2" type="CenterContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 316.0
margin_right = 616.0
size_flags_horizontal = 3

[node name="WeaponSystemControl2" parent="MarginContainer/VBoxContainer/HBoxContainer/CenterContainer2" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 144.0
margin_right = 156.0

[node name="CenterContainer3" type="CenterContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 632.0
margin_right = 932.0
size_flags_horizontal = 3

[node name="WeaponSystemControl3" parent="MarginContainer/VBoxContainer/HBoxContainer/CenterContainer3" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 144.0
margin_right = 156.0

[node name="CenterContainer4" type="CenterContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 948.0
margin_right = 1248.0
size_flags_horizontal = 3

[node name="WeaponSystemControl4" parent="MarginContainer/VBoxContainer/HBoxContainer/CenterContainer4" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 144.0
margin_right = 156.0
[connection signal="weapon_changed" from="." to="MarginContainer/VBoxContainer/HBoxContainer/CenterContainer/WeaponSystemControl" method="_on_WeaponSystem_weapon_changed"]
